# asila-s

./: .gitignore  INTEGRATION.md  README.md  design.md  docker-compose.yml  requirements.md  slides.md  work-done.md
.github/: copilot-instructions.md
backend/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: analytics.py  auth.py  broadcasts.py  notices.py  webhook.py
backend/app/core/: config.py  deps.py  middleware.py  security.py
backend/app/db/: session.py  tenancy.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  broadcasts.py  notices.py  webhook.py
backend/app/services/: auth.py  broadcast.py  cache.py  guardrails.py  ingestion.py  intent.py  llm.py  logging.py  query.py  rag.py  ratelimit.py  retrieval.py  tenants.py  users.py
backend/tests/: test_app.py
